--- a/src/homescreen.css
+++ b/src/homescreen.css
@@ -13,6 +13,7 @@
 }
 
 .homepage-container-header{
+  position:fixed;
   cursor:auto;
   content: flex;
   flex-direction: column;
@@ -24,16 +25,18 @@
 }
 
 .homepage-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100; /* Make sure it stays above other content */
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
   padding: 20px 0;
   background-color: #000621;
   font-size: 20px;
   position: absolute;
-  top: 0;
-  z-index: 2;
 }
 
 .homepage-button{
@@ -81,7 +84,7 @@
   font-weight: bold;
   text-align: center;
   position: absolute;
-  top: 48%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -196,5 +199,49 @@
   width: 100%;
   height: 100vh;
   object-fit: cover;
-  top: -50px; /* Raised the video to be centered height wise */
+  top: -75px; /* Raised the video to be centered height wise */
+}
+
+.icon-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px; /* space between icons */
+  padding: 0 20px; /* match .homepage-button horizontal padding */
+}
+
+.icon-group .header-icon {
+  color: rgb(255, 255, 255);
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: transparent;
+  border-color: transparent;
+  font-size: 2.5em;
+  transition: color 0.3s;
+}
+
+.icon-group .header-icon-2 {
+  color: #00318B;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: transparent;
+  border-color: transparent;
+  font-size: 3.5em;
+  transition: color 0.3s;
+}
+
+.icon-group .header-icon:hover {
+  color: rgb(255, 126, 126);
+  scale: 1.15;
+  transition: scale 0.5s ease;
+}
+
+.icon-group .header-icon-2:hover {
+  color: rgb(255, 126, 126);
+  scale: 1.15;
+  transition: scale 0.5s ease;
+}
+
+.main-content {
+  margin-top: 100px; /* Adjust to match your header height */
 }
