--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,5 @@
 .homepage-container-header{
+  max-height: 65px;
     position: fixed;
     top: 0;
     left: 0;
@@ -19,11 +20,13 @@
     background: none;
     cursor: pointer;
     padding: 10px 80px;
+    padding-bottom: 60px;
     font-weight: 500;
     border-style: solid;
     border-width: 2px;
     border-color: transparent;
     border-radius: 10px;  
+
   }
   
   .homepage-button.selected {
