--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -6,20 +6,16 @@
 .portfolio-container {
     padding: 5%;
     width: 70%;
-    margin: 0 auto;
     animation: fadeIn 1s ease-in;
-
 }
 
 /* Fade animations */
 @keyframes fadeIn {
     from {
         opacity: 0;
-        transform: scale(0.8);
     }
     to {
         opacity: 1;
-        transform: scale(1);
     }
 }
 
@@ -50,7 +46,7 @@
 }
 
 .portfolio-item {
-    background: 000621;
+    background: #000621;
     border-color: rgb(255, 255, 255);
     border-width: 5px;
     border-style: solid;
@@ -64,7 +60,9 @@
 }
 
 .portfolio-item:hover {
-    transform: scale(1.00);
+    transform: scale(1.02);
+    transition: transform 0.5s ease-in-out;
+    cursor: pointer;
 }
 
 .portfolio-thumbnail {
@@ -81,7 +79,8 @@
 }
 
 .portfolio-bottom-container {
-    background: white;
+    background: transparent;
+    border-top: 5px solid white;
 }
 
 .portfolio-title {
@@ -93,7 +92,23 @@
 
 .portfolio-description {
     color: white;
-    padding: 0 1rem 1rem;
     text-align: center;
 }
 
+
+.portfolio-bottom-container-icons{
+    height: 100%;
+    display: flex;
+    color: white;
+    font-size: 3em;
+    justify-content: center;
+    padding-bottom: 1rem;
+    gap: 1rem;
+}
+
+.devicon-csharp-plain-wordmark{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
