--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -4,28 +4,42 @@
 }
 
 .resume-container1{
-    padding-top: 150px;
     width:100%;
+    min-height: 1000px;
     background-color: #000621;
     display: flex;
     justify-content: center;
+    padding-top: 150px;
 }
 
 .resume-image{
     max-width: 800px;
-    animation: fadeIn 1.5s ease-in-out;
+    animation: fadeIn 2s ease-out;
+    transition: all 0.3s ease;
+}
+
+.resume-image:hover{
+    scale: 1.02;
+    transition: scale 0.5s ease;
 }
 
 .scroll-indicator {
     position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: 60px;
     z-index: 3;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
 }
 
-.arrow {
+.arrow-text{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.arrow1{
     width: 30px;
     height: 30px;
     border-right: 3px solid white;
@@ -36,12 +50,13 @@
 }
 
 .resume-container2{
-    padding-top: 120px;
+    padding-top: 150px;
     width:70%;
     max-width: 1200px;
     background-color: #000621;
     margin: 0 auto;
 }
+
 /* ==========================================================================
    Resume Container Styles
    ========================================================================== */
@@ -54,6 +69,8 @@
     border: 5px solid #000000;  /* Blue border for work experience */
     margin-bottom: 50px;
     background-color: #ebebeb;
+    animation: fadeIn 1.5s ease-in-out;
+
 }
 
 
