--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -53,10 +53,7 @@
     transition: transform 0.2s ease-in-out;
     overflow: hidden;
 
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-radius: 20px;
 }
 
 .portfolio-item:hover {
@@ -105,6 +102,7 @@
     padding-bottom: 1rem;
     gap: 1rem;
 }
+
 
 .devicon-csharp-plain-wordmark{
     display: flex;
