--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -20,15 +20,12 @@
     text-align: center;
     transition: all 0.3s ease;
     background: none;
+    border: none;
+    outline: none;
     cursor: pointer;
     padding: 0px 80px;
     padding-bottom: 60px;
     font-weight: 500;
-    border-style: solid;
-    border-width: 2px;
-    border-color: transparent;
-    border-radius: 10px;  
-
   }
   
   .homepage-button.selected {
@@ -39,6 +36,16 @@
   .homepage-button:hover {
     color: rgb(255, 126, 126);
     transform: scale(1.025);
+  }
+
+  .homepage-button:focus {
+    border: none;
+    outline: none;
+  }
+
+  .homepage-button:active {
+    border: none;
+    outline: none;
   }
 
   .icon-group {
