--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,6 +1,6 @@
 :root {
   --color-bg-dark: #000621;
-  --color-pink: rgb(255, 126, 126);
+  --color-pink: #ff7e7e;
   --color-blue: #1e90ff;
   --color-white: #fff;
   /* Add more as needed */
