--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -89,6 +89,14 @@
 .portfolio-description {
     color: white;
     text-align: center;
+    font-size: 1.2rem;
+    padding-bottom:0;
+}
+
+.portfolio-description2 {
+    color: white;
+    text-align: center;
+    font-size: 1rem;
 }
 
 
