added images for experience

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -135,7 +135,7 @@
     border-style: solid;
     transition: transform 0.2s ease-in-out;
     overflow: hidden;
-    border-radius: 0;
+    border-radius: 20px;
 }
 
 .portfolio-item:hover {
@@ -147,7 +147,7 @@
 .portfolio-thumbnail {
     width: 100%;
     overflow: hidden;
-    border-radius: 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .portfolio-thumbnail img {
@@ -156,12 +156,13 @@
     border-bottom-width: 5px;
     border-bottom-style: solid;
     object-fit: cover;
-    border-radius: 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .portfolio-bottom-container {
     background: transparent;
     border-top: 5px solid white;
+    border-radius: 0 0 20px 20px;
 }
 
 .portfolio-title {
